# vae-sandbox

./: .gitignore  LICENSE  README.md  pyproject.toml  vae.py
.github/workflows/: black.yml
conf/base/: logging.yml
src/: setup.py
src/tests/: test_run.py
src/vae_sandbox/: __init__.py
vae_sandbox/: __main__.py  settings.py
vae_sandbox/core/: __init__.py  vae.py
vae_sandbox/tests/: test_vae.py
