[tool.poetry]
name = "vae-sandbox"
version = "0.1.0"
description = ""
authors = ["Mateusz Leonowicz <mleonowicz@antmicro.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "vae_sandbox"}]

[tool.poetry.dependencies]
python = "^3.11"
pytorch-lightning = "^2.0.5"
torch = ">=2.0.0, !=2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
